# libtouptek

./: .gitignore  CMakeLists.txt  README.md
include/: altaircam.h  mallincam.h  meadecam.h  nncam.h  omegonprocam.h  starshootg.h  toupcam.h
include/touptek/: defines.h  flags.h  functions.h  types.h
src/: CMakeLists.txt  altaircam.c  cameras.c  cameras.h  connection.c  connection.h  enumerate.c  fnGroups.c  getSettings.c  getSettings.h  internals.h  mallincam.c  meadecam.c  nncam.c  omegonprocam.c  starshootg.c  toupcam.c  writeSettings.c  writeSettings.h
tests/: CMakeLists.txt  altaircam-list.c  mallincam-list.c  meadecam-list.c  nncam-list.c  omegonprocam-list.c  starshootg-list.c  toupcam-list.c
